<resources>
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="movie_poster">Poster of movie</string>
    <string name="added_favorite">Added to favorite</string>
    <string name="removed_favorite">Removed from favorite</string>
    <string name="about_description">This application allows you to discover interesting movies, look detail information and also save movies to favorite list</string>
    <string name="rate_app_dialog_positive_button">RATE APP</string>
    <string name="rate_app_negative_button">CLOSE</string>
    <string name="no_favorite_movies">You have no favorites movies yet!</string>
    <string name="no_favorite_movies_icon">No favorite movies icon</string>
    <string name="play_button">Play trailer button</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="finish_button">Done</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="cast_image">Cast image</string>
    <string name="share_icon">Share icon</string>
    <string name="share_to">How you want to send movie detail?</string>
    <string name="share_message">Hey, i recommend you that movie:\n%s\n%s</string>
    <string name="original_title">Original title:</string>
    <string name="photo_detail">Photo detail</string>
    <string name="intro_description_item_00">Find popular and top rated movies,\nexplore movies to watch tonight!</string>
    <string name="intro_description_item_01">Watch movie recommendations\nand find something new for yourself!</string>
    <string name="intro_description_item_02">Save your favorite movies\ninto your own collection!</string>
    <string name="intro_file_path_item_00" translatable="false">movie.json</string>
    <string name="intro_file_path_item_01" translatable="false">recommendation.json</string>
    <string name="intro_file_path_item_02" translatable="false">heart.json</string>
    <string name="search_item">Search</string>
    <string name="search_hint">Start typing…</string>
    <string name="search_movie_title">Search movies</string>
    <string name="favorite_item">Favorite</string>
    <string name="about_item">About</string>

    <string-array name="intro_descriptions">
        <item>@string/intro_description_item_00</item>
        <item>@string/intro_description_item_01</item>
        <item>@string/intro_description_item_02</item>
    </string-array>
    <string-array name="intro_file_paths">
        <item>@string/intro_file_path_item_00</item>
        <item>@string/intro_file_path_item_01</item>
        <item>@string/intro_file_path_item_02</item>
    </string-array>


    <!-- NEW STRING -->
    <string name="about_movie_tab_title">About movie</string>
    <string name="reviews_tab_title">Reviews</string>
    <string name="status_want_to_watch">Want to watch</string>
    <string name="status_favorite">Favorite</string>
    <string name="status_already_saw">Already saw</string>
    <string name="status_set_toast">Status set successfully</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="description">DESCRIPTION</string>
    <string name="cast">CAST</string>
    <string name="genre">GENRE</string>
    <string name="movie_recommendations">RECOMMENDATIONS</string>
    <string name="translate_button">Translate</string>
    <string name="show_more">Show more</string>
    <string name="main_screen_popular_now">Popular now</string>
    <string name="main_screen_movies_title">Movies</string>
    <string name="main_screen_now_playing">Now playing</string>
    <string name="main_screen_top_rated">Top rated</string>
    <string name="main_screen_upcoming">Upcoming</string>
    <string name="main_screen_latest">Latest</string>
    <string name="welcome_account_text">If you want to see you favorite movies, sign in or create account</string>
    <string name="welcome_screen_next">Next</string>
    <string name="account_title">Account</string>
    <string name="hint_email">Input email</string>
    <string name="hint_password">Input password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Register</string>
    <string name="edit_text_email_error">Email is invalid!</string>
    <string name="edit_text_password_error">Password is invalid!</string>
    <string name="account_button_sign_out">Sign out</string>
    <string name="about">About</string>
    <string name="restore_password">Restore password</string>
    <string name="reset_password_success">Instructions sent to specified e-mail</string>


</resources>
