<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@color/colorPrimary">

        <androidx.cardview.widget.CardView
            android:id="@+id/detail_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/darkGray"
            app:cardCornerRadius="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/card_view_content_padding_horizontal"
                android:paddingTop="@dimen/card_view_content_padding_vertical"
                android:paddingEnd="@dimen/card_view_content_padding_horizontal"
                android:paddingBottom="@dimen/card_view_content_padding_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/description"
                        android:textAllCaps="true"
                        android:textColor="@color/lightGray" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="Movie description here we go" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/release_date"
                        android:textAllCaps="true"
                        android:textColor="@color/lightGray" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="23 sept. 2020" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/genre"
                        android:textAllCaps="true"
                        android:textColor="@color/lightGray" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/genres_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cast_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/darkGray"
            app:cardCornerRadius="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/card_view_content_padding_vertical"
                android:paddingBottom="@dimen/card_view_content_padding_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cast"
                        android:textAllCaps="true"
                        android:textColor="@color/lightGray" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recommendation_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/darkGray"
            app:cardCornerRadius="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/card_view_content_padding_vertical"
                android:paddingBottom="@dimen/card_view_content_padding_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/movie_recommendations"
                        android:textAllCaps="true"
                        android:textColor="@color/lightGray" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_recommendation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>