<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/darkGray"
                app:cardCornerRadius="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/card_view_content_padding_horizontal"
                    android:paddingTop="@dimen/card_view_content_padding_vertical"
                    android:paddingEnd="@dimen/card_view_content_padding_horizontal"
                    android:paddingBottom="@dimen/card_view_content_padding_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:elevation="0dp"
                            app:cardCornerRadius="48dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/profile_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:adjustViewBounds="true"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/cardView"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/text_view_user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:visibility="invisible"
                                tools:text="Username"
                                tools:visibility="visible" />

                            <TextView
                                android:id="@+id/text_view_registration_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/lightGray"
                                android:visibility="invisible"
                                tools:text="Username"
                                tools:visibility="visible" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/darkGray"
                app:cardCornerRadius="16dp">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/card_view_content_padding_vertical"
                    android:paddingBottom="@dimen/card_view_content_padding_vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_view_content_padding_horizontal"
                            android:layout_marginBottom="16dp"
                            android:text="@string/status_want_to_watch"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_want_to_watch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="25dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_view_content_padding_horizontal"
                            android:layout_marginBottom="16dp"
                            android:text="@string/status_favorite"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_favorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="25dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_view_content_padding_horizontal"
                            android:layout_marginBottom="16dp"
                            android:text="@string/status_already_saw"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view_already_saw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="25dp" />


                    </LinearLayout>


                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_out"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/account_button_sign_out"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:strokeWidth="0dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>